add image support

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ Port = ":8080"
 
 [Git]
 UseGit = true
-RepoURL = "https://git.tcp.direct/S4D/tcp-wiki.git"
+RepoURL = "https://github.com/vxfemboy/tcp-wiki.git"
 Branch = "main"
 LocalPath = "data"
 
